# proof-of-work-faucet

./: Anchor.toml  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
programs/proof-of-work-faucet/: Cargo.toml
programs/proof-of-work-faucet/src/: lib.rs
tests/: proof-of-work-faucet.ts
