[package]
name = "proof-of-work-faucet"
version = "0.1.0"
description = "Democratizing access to devnet SOL"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_work_faucet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
bs58 = "0.5.0"
